@@ -1,3 +1,9 @@
+2010-04-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (vc-version-backup-file-name): use just the last
+	branch and the revision for backups, the full revision string is
+	too long.  Bug #4
+
 2010-04-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase-delete-file): add -force argument
